--- a/工程化/自动化构建系统/gulp/实战/src/assets/styles/index.scss
+++ b/工程化/自动化构建系统/gulp/实战/src/assets/styles/index.scss
@@ -1,8 +1,5 @@
 @import "mixins.scss";
-$color: #333;
-body {
-  color: $color;
-}
-h4 {
-  @include WH(500, 30);
+img {
+  width: 400px;
+  height: 300px;
 }
